path to the video edited

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<section class="hero">
 			<div class="hero__background-video-wrapper">
 				<video autoplay loop muted plays-inline class="background-video">
-					<source src="../static/videos/hero_background.mp4" />
+					<source src="static/videos/hero_background.mp4" />
 				</video>
 			</div>
 
